alignment problem solved

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   line-height: 24px;
   color: #88898e;
   padding-left: 10px;
+  border-radius: 8px;
 }
 
 /* searchbar */
